manifests-successful/weave-scope-1.0.2.tgz-manifest.yaml
---
# Source: weave-scope/charts/weave-scope-frontend/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:    
    chart: weave-scope-frontend-0.10.0
    heritage: Helm
    release: my-release
    app: weave-scope
    component: frontend
  name: my-release-weave-scope
  annotations:    
    cloud.weave.works/launcher-info: |-
      {
        "server-version": "master-4fe8efe",
        "original-request": {
          "url": "/k8s/v1.7/scope.yaml"
        },
        "email-address": "support@weave.works",
        "source-app": "weave-scope",
        "weave-cloud-component": "scope"
      }
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: weave-scope
    release: my-release
    component: frontend
  type: ClusterIP
---
# Source: weave-scope/charts/weave-scope-agent/templates/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:    
    chart: weave-scope-agent-0.10.1
    heritage: Helm
    release: my-release
    app: weave-scope
    component: agent
  name: weave-scope-agent-my-release
  annotations:    
    cloud.weave.works/launcher-info: |-
      {
        "server-version": "master-4fe8efe",
        "original-request": {
          "url": "/k8s/v1.7/scope.yaml"
        },
        "email-address": "support@weave.works",
        "source-app": "weave-scope",
        "weave-cloud-component": "scope"
      }
spec:
  selector:
    matchLabels:
      app: weave-scope
      release: my-release
      component: agent
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:        
        chart: weave-scope-agent-0.10.1
        heritage: Helm
        release: my-release
        app: weave-scope
        component: agent
    spec:
      tolerations:
        - effect: NoSchedule
          operator: Exists
      containers:
        - name: weave-scope-agent
          image: "weaveworks/scope:1.10.1"
          imagePullPolicy: "IfNotPresent"
          args:
            - '--no-app'
            - '--probe.docker.bridge=docker0'
            - '--probe.docker=true'
            - '--probe.kubernetes=true'
            - '--probe.kubernetes.role=host'
            
            - my-release-weave-scope.weave-scope-1.0.2.tgz.svc:80
          securityContext:
            privileged: true
          resources:
            null
          volumeMounts:
            - name: docker-socket
              mountPath: /var/run/docker.sock
            - name: scope-plugins
              mountPath: /var/run/scope/plugins
            - name: sys-kernel-debug
              mountPath: /sys/kernel/debug
      volumes:
        - name: docker-socket
          hostPath:
            path: /var/run/docker.sock
        - name: scope-plugins
          hostPath:
            path: /var/run/scope/plugins
        - name: sys-kernel-debug
          hostPath:
            path: /sys/kernel/debug
      hostPID: true
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: weave-scope-agent-my-release
---
# Source: weave-scope/charts/weave-scope-frontend/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:    
    chart: weave-scope-frontend-0.10.0
    heritage: Helm
    release: my-release
    app: weave-scope
    component: frontend
  name: weave-scope-frontend-my-release
  annotations:    
    cloud.weave.works/launcher-info: |-
      {
        "server-version": "master-4fe8efe",
        "original-request": {
          "url": "/k8s/v1.7/scope.yaml"
        },
        "email-address": "support@weave.works",
        "source-app": "weave-scope",
        "weave-cloud-component": "scope"
      }
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weave-scope
      release: my-release
      component: frontend
  template:
    metadata:
      labels:        
        chart: weave-scope-frontend-0.10.0
        heritage: Helm
        release: my-release
        app: weave-scope
        component: frontend
    spec:
      containers:
        - name: weave-scope-frontend
          image: "weaveworks/scope:1.10.1"
          imagePullPolicy: "IfNotPresent"
          args:
            - "--no-probe"
          ports:
            - name: http
              containerPort: 4040
              protocol: TCP
          resources:
            null
---
# Source: weave-scope/charts/weave-scope-frontend/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name
  annotations:
spec:
  ingressClassName: 
  rules:
    - host: www.example.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weave-weave-scope
                port:
                  number: 80
---
# Source: weave-scope/templates/weave-scope-tests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "my-release-ui-test-zybjs"
  annotations:
    "helm.sh/hook": test-success
  labels:    
    chart: weave-scope-1.0.2
    heritage: Helm
    release: my-release
    app: weave-scope
spec:
  containers:
    - name: my-release-ui-test
      image: dduportal/bats:0.4.0
      command: ["/tools/bats/bats", "-t", "/tests/run.sh"]
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: weave-scope-my-release-tests
  - name: tools
    emptyDir: {}
  restartPolicy: Never
